# MatlabQtVTK

./: README.md
matlab/: CellToJson.m  CheckPolyMeshConsistency.m  ConvertPolyMeshToTriangleMesh.m  CreatePolyMesh.m  CreateTriangleMesh.m  MatlabClientClass.asv  MatlabClientClass.m  MergeTriangleMesh.m  PointData.data  PolyMeshClass.m  ReadDIOMVolume.m  ReadImageDataFromRawDataFile.m  ReadPolyMeshDataFile_inp.m  ReadPolyMeshDataFile_vtk.m  SplitPolyCellToTriangle.m  TriangleMeshClass.m  Untitled2.m  WriteImageDataToRawDataFile.m  WriteTaskData.m  WriteTaskText.m  test.m  testClient.m  testJson.m  testJsonm.asv  testMatrixToImage.m  test_Mesh_heart.m  test_heart.m  test_plot_vector_tensor.m  test_point_line.m  test_vtkplotpoint.asv  test_vtkplotpoint.m  vtkfigure.m  vtkplotline.m  vtkplotpoint.asv  vtkplotpoint.m  vtkplottensor.m  vtkplotvector.m  vtkremoveprop.m  vtkshowaxes.m  vtkshowpolymesh.m  (+3 more)
matlab/jsonlab/examples/: example4.json  jsonlab_selftest.m
qtvtk/: CMakeLists.txt  LocalTaskServer.cpp  LocalTaskServer.h  QVtkFigure.cpp  QVtkFigure.h  QVtkFigureMainWindow.cpp  QVtkFigureMainWindow.h  SimpleJsonWriter.cpp  SimpleJsonWriter.h  TaskHandler.cpp  TaskHandler.h  main.cpp
test/: test_plot_mesh.m  test_plot_point_line.m  test_plot_vector_tensor.m  test_show_volume.m
